modules/wycs/tests/valid/test_061.wycs
assert forall [ int x, {int} xs, {int} ys :
       (x in xs && xs ⊆ ys) ==> x in ys
]