modules/wycs/tests/invalid/test_061.wycs
assert:
   forall(int x, {int} xs, {int} ys):
       (x in xs && ys ⊆ xs) ==> x in ys